tests/ast_interpreter/err_type_binary.expected
<string>:2:7: error: operator Add cannot be applied to Int and Null
    5 + null;
      ^
