tests/ast_interpreter/err_type_binary.nx
fun main() {
    5 + null;
}
